--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,21 +44,55 @@ nav a:hover {
 }
 
 main {
+    background-color: var(--cor3);
     min-width: 300px;
     max-width: 800px;
     margin: auto;
     margin-bottom: 30px;
     padding: 20px;
-    background-color: var(--cor3);
-    color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
     border-bottom-left-radius: 10px;
-    border-bottom-left-radius: 10px;   
+    border-bottom-right-radius: 10px;
 }
 
 main p {
-    margin: 15px 0px 15px 0px;
+    margin: 15px;
     text-align: justify;
     text-indent: 30px;
-    font-size: 1em;
+    font-size: 1.1em;
+    line-height: 1.2em;
 }
+
+section {
+    padding-top: 20vh;
+    padding-bottom: 20vh;
+    line-height: 2em;
+    padding-left: 15px;
+    font-size: 2vw;
+}
+
+section.imagem > p {
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+
+section.imagem {
+    background-color: rgba(51, 51, 51);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+section#img1 {
+    background-image: url('../imagens/navios-premium/img1.png');
+    background-position: center center;
+}
+
+section#img2 {
+    background-image: url('../imagens/navios-premium/img2.png');
+}
+
+
