--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,6 +63,11 @@ main p {
     line-height: 1.2em;
 }
 
+img {
+    display: block;
+    margin: auto;
+}
+
 section {
     padding-top: 20vh;
     padding-bottom: 20vh;
